app-ds.yml


---
# Java Application Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bankapp
spec:
  replicas: 2
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: bankapp
  template:
    metadata:
      labels:
        app: bankapp
    spec:
      containers:
      - name: bankapp
        image: parthu210/bankapp:v4
        ports:
        - containerPort: 8080
---
# Bank Application Service
apiVersion: v1
kind: Service
metadata:
  name: bankapp-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: bankapp
